Fix Gemini model names to valid API versions

--- a/index.html
+++ b/index.html
@@ -718,10 +718,9 @@
                 { value: 'claude-3-opus-20240229', label: 'Claude 3 Opus' }
             ],
             gemini: [
-                { value: 'gemini-2.5-pro-latest', label: 'Gemini 2.5 Pro' },
-                { value: 'gemini-2.5-flash-latest', label: 'Gemini 2.5 Flash' },
-                { value: 'gemini-2.5-flash-lite-latest', label: 'Gemini 2.5 Flash Lite' },
-                { value: 'gemini-2.0-flash-exp', label: 'Gemini 2.0 Flash (Experimental)' }
+                { value: 'gemini-1.5-pro-latest', label: 'Gemini 1.5 Pro' },
+                { value: 'gemini-1.5-flash-latest', label: 'Gemini 1.5 Flash' },
+                { value: 'gemini-1.0-pro', label: 'Gemini 1.0 Pro' }
             ]
         };
         
