--- a/index.html
+++ b/index.html
@@ -718,9 +718,9 @@
                 { value: 'claude-3-opus-20240229', label: 'Claude 3 Opus' }
             ],
             gemini: [
-                { value: 'gemini-1.5-pro-latest', label: 'Gemini 1.5 Pro' },
-                { value: 'gemini-1.5-flash-latest', label: 'Gemini 1.5 Flash' },
-                { value: 'gemini-1.0-pro', label: 'Gemini 1.0 Pro' }
+                { value: 'gemini-2.0-flash-exp', label: 'Gemini 2.0 Flash (Experimental)' },
+                { value: 'gemini-exp-1206', label: 'Gemini 2.5 Pro (Experimental)' },
+                { value: 'gemini-2.0-flash-thinking-exp-1219', label: 'Gemini 2.0 Flash Thinking' }
             ]
         };
         
