Fix: Make select dropdown visible with explicit styles

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         
         select.form-control {
             cursor: pointer;
+            background: #fff;
+            appearance: auto;
+            -webkit-appearance: menulist;
+            -moz-appearance: menulist;
+            height: auto;
+            min-height: 2.5rem;
         }
         
         .hint {
