Fix: Make select dropdown option text visible (black text on white bg)

--- a/index.html
+++ b/index.html
@@ -99,11 +99,17 @@
         select.form-control {
             cursor: pointer;
             background: #fff;
+            color: #000;
             appearance: auto;
             -webkit-appearance: menulist;
             -moz-appearance: menulist;
             height: auto;
             min-height: 2.5rem;
+        }
+        
+        select.form-control option {
+            background: #fff;
+            color: #000;
         }
         
         .hint {
