--- a/index.html
+++ b/index.html
@@ -497,28 +497,32 @@
             analysisData: null
         };
         
-        // 모델 목록 (2025년 11월 기준 최신)
+        // 모델 목록 (2025년 11월 기준 - 실제 API 모델명)
         const models = {
             claude: [
-                { value: 'claude-opus-4-1-20250805', label: 'Claude Opus 4.1 ⭐ (최고 성능)' },
-                { value: 'claude-opus-4-1-thinking-16k-20250805', label: 'Claude Opus 4.1 Thinking-16k' },
-                { value: 'claude-sonnet-4-20250514', label: 'Claude Sonnet 4' },
-                { value: 'claude-3-5-sonnet-20241022', label: 'Claude 3.5 Sonnet (Legacy)' },
-                { value: 'claude-3-opus-20240229', label: 'Claude 3 Opus (Legacy)' }
+                { value: 'claude-sonnet-4-20250514', label: 'Claude Sonnet 4 ⭐ (최신)' },
+                { value: 'claude-3-7-sonnet-20250219', label: 'Claude 3.7 Sonnet' },
+                { value: 'claude-3-5-sonnet-20241022', label: 'Claude 3.5 Sonnet' },
+                { value: 'claude-3-5-sonnet-20240620', label: 'Claude 3.5 Sonnet (Jun)' },
+                { value: 'claude-3-opus-20240229', label: 'Claude 3 Opus' },
+                { value: 'claude-3-haiku-20240307', label: 'Claude 3 Haiku (빠름)' }
             ],
             gemini: [
-                { value: 'gemini-2.5-pro-latest', label: 'Gemini 2.5 Pro ⭐ (최신)' },
-                { value: 'gemini-2.5-flash-reasoning-latest', label: 'Gemini 2.5 Flash Reasoning' },
-                { value: 'gemini-2.0-flash-exp', label: 'Gemini 2.0 Flash' },
-                { value: 'gemini-exp-1206', label: 'Gemini 2.0 Pro Experimental (Legacy)' },
-                { value: 'gemini-2.0-flash-thinking-exp-1219', label: 'Gemini 2.0 Flash Thinking (Legacy)' }
+                { value: 'gemini-2.0-flash-exp', label: 'Gemini 2.0 Flash ⭐ (최신 빠름)' },
+                { value: 'gemini-exp-1206', label: 'Gemini 2.0 Pro Exp (고성능)' },
+                { value: 'gemini-2.0-flash-thinking-exp-01-21', label: 'Gemini 2.0 Flash Thinking' },
+                { value: 'gemini-1.5-pro', label: 'Gemini 1.5 Pro' },
+                { value: 'gemini-1.5-flash', label: 'Gemini 1.5 Flash (빠름)' },
+                { value: 'gemini-1.5-flash-8b', label: 'Gemini 1.5 Flash 8B (경량)' }
             ],
             openai: [
-                { value: 'gpt-5', label: 'GPT-5 (High) ⭐ (최고 성능)' },
-                { value: 'gpt-4.1', label: 'GPT-4.1' },
-                { value: 'gpt-4o', label: 'GPT-4o' },
-                { value: 'o3-pro', label: 'o3-pro (추론 특화)' },
-                { value: 'gpt-4-turbo', label: 'GPT-4 Turbo (Legacy)' }
+                { value: 'gpt-4o', label: 'GPT-4o ⭐ (최신 멀티모달)' },
+                { value: 'gpt-4o-mini', label: 'GPT-4o Mini (빠름)' },
+                { value: 'gpt-4-turbo', label: 'GPT-4 Turbo' },
+                { value: 'gpt-4', label: 'GPT-4' },
+                { value: 'gpt-3.5-turbo', label: 'GPT-3.5 Turbo (경량)' },
+                { value: 'o1-preview', label: 'o1-preview (추론 특화)' },
+                { value: 'o1-mini', label: 'o1-mini (추론 경량)' }
             ]
         };
         
